--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -7,8 +7,10 @@
   language_version: '3.10'
   minimum_pre_commit_version: '2.20.0'
   name: format dockerfiles
+  types: ["dockerfile"]
 - id: print-detection
   entry: pre_commit_hooks/bash/print_detection.sh
   language: script
   minimum_pre_commit_version: '2.20.0'
   name: detect print on python code
+  types: ["python"]
