--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,6 +2,7 @@
   additional_dependencies:
       - dockerfile-parse
   description: format dockerfiles
+  files: '.dockerfile$'
   entry: format-dockerfile
   language: python
   language_version: '3.10'
@@ -10,6 +11,7 @@
   types: ["dockerfile"]
 - id: print-detection
   entry: pre_commit_hooks/bash/print_detection.sh
+  files: '.py$'
   language: script
   minimum_pre_commit_version: '2.20.0'
   name: detect print on python code
