--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
 
 [options]
-packages = pre_commit_hooks
+packages = pre_commit_hooks~
 install_requires =
     dockerfile-parse==2.0.1
 python_requires = >=3.10
