--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,11 +1,11 @@
 - id: format-dockerfiles
   additional_dependencies:
-      - dockerfile-parse==2.0.1
+    - dockerfile-parse
   description: format dockerfiles
   files: '.dockerfile$'
   entry: format-dockerfile
   language: python
-  language_version: '3.10'
+  language_version: '3.11'
   minimum_pre_commit_version: '2.20.0'
   name: format dockerfiles
   types: ["dockerfile"]
