--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -9,7 +9,7 @@
   minimum_pre_commit_version: '2.20.0'
   name: format dockerfiles
   types: ["dockerfile"]
-- id: print-detection
+- id: python-print-detection
   entry: pre_commit_hooks/bash/print_detection.sh
   files: '.py$'
   language: script
