--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -12,7 +12,7 @@
 - id: python-print-detection
   entry: pre_commit_hooks/bash/print_detection.sh
   files: '.py$'
-  language: script
+  language: python
   minimum_pre_commit_version: '2.20.0'
   name: detect print on python code
   types: ["python"]
