--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
 
 [options]
-packages = pre_commit_hooks~
-install_requires =
-    dockerfile-parse==2.0.1
+packages = pre_commit_hooks
 python_requires = >=3.10
 
 [options.packages.find]
@@ -22,7 +20,11 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    format-dockerfile = pre_commit_hooks.python.format_dockerfile:main
+    format-dockerfile = pre_commit_hooks.python.format_dockerfile:main [format_dockerfile]
+
+[options.extras_require]
+format_dockerfile = 
+    dockerfile-parse==2.0.1
 
 [bdist_wheel]
 universal = True
