--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -10,7 +10,7 @@
   name: format dockerfiles
   types: ["dockerfile"]
 - id: python-print-detection
-  entry: print_detection
+  entry: print-detection
   files: '.py$'
   language: python
   minimum_pre_commit_version: '2.20.0'
