--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ exclude =
 [options.entry_points]
 console_scripts =
     format-dockerfile = pre_commit_hooks.python.format_dockerfile:main [format_dockerfile]
+    print-detection = pre_commit_hooks.python.print_detection:main
 
 [options.extras_require]
 format_dockerfile = 
