update version and package detection

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre_commit_hooks_tools
-version = 0.0.7
+version = 0.0.25
 url = https://github.com/chrysa/pre-commit-tools
 license = MIT
 license_files = LICENSE
@@ -10,7 +10,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
 
 [options]
-packages = pre_commit_hooks
+packages = find:
 python_requires = >=3.10
 
 [options.packages.find]
