--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
 
 [options]
-packages = find:
+packages = pre_commit_hooks/python
 python_requires = >=3.10
 
 [options.packages.find]
