package discover update

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre_commit_hooks_tools
-version = 0.0.25
+version = 0.0.30
 url = https://github.com/chrysa/pre-commit-tools
 license = MIT
 license_files = LICENSE
@@ -10,18 +10,21 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
 
 [options]
-packages = pre_commit_hooks/python
+package_dir=
+    =pre_commit_hooks
+packages=find:
 python_requires = >=3.10
 
 [options.packages.find]
 exclude =
     tests*
     testing*
+where=pre_commit_hooks
 
 [options.entry_points]
 console_scripts =
-    format-dockerfile = pre_commit_hooks.python.format_dockerfile:main [format_dockerfile]
-    print-detection = pre_commit_hooks.python.print_detection:main
+    format-dockerfile = pre_commit_hooks.format_dockerfile:main [format_dockerfile]
+    print-detection = pre_commit_hooks.print_detection:main
 
 [options.extras_require]
 format_dockerfile = 
