add new hook and try to fix dockerfile changement detection

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ exclude =
 console_scripts =
     format-dockerfile = pre_commit_hooks.format_dockerfile:main [format_dockerfile]
     print-detection = pre_commit_hooks.print_detection:main
+    pprint-detection = pre_commit_hooks.pprint_detection:main
 
 [options.extras_require]
 format_dockerfile =
