--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = pre_commit_hooks_tools
 version = 0.0.33
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/chrysa/pre-commit-tools
 license = MIT
 license_files = LICENSE
