--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,8 +17,6 @@ repos:
         - id: end-of-file-fixer
         - id: check-yaml
         - id: debug-statements
-        - id: name-tests-test
-        - id: requirements-txt-fixer
     - repo: https://github.com/asottile/setup-cfg-fmt
       rev: 583e6b807299b819eef8ec12f3ac4341dc0f2f15
       hooks:
@@ -32,13 +30,13 @@ repos:
       rev: e010ba1c8190323b9c68d4d398789dc867ecd0b2
       hooks:
         - id: add-trailing-comma
-    # - repo: https://github.com/frnmst/md-toc
-    #   rev: 8.2.0
-    #   hooks:
-    #       - id: md-toc
-    #         args: [--in-place, github, --header-levels, '6']
-    #         stages:
-    #             - manual
+    - repo: https://github.com/frnmst/md-toc
+      rev: 8.2.0
+      hooks:
+          - id: md-toc
+            args: [--in-place, github, --header-levels, '6']
+            stages:
+              - manual
     - repo: https://github.com/igorshubovych/markdownlint-cli
       rev: febea6211c11cfb4c763a6f8abbd456148b7a029
       hooks:
