rework format dockerfile

--- a/setup.cfg
+++ b/setup.cfg
@@ -108,8 +108,7 @@ load-plugins =
     pylint.extensions.typing,
     pylint.extensions.redefined_variable_type,
     pylint.extensions.comparison_placement,
-    pylint.extensions.mccabe,
-    pylint_report
+    pylint.extensions.mccabe
 unsafe-load-any-extension = no
 py-version = 3.10
 limit-inference-results = 100
