test pylint on script

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ console_scripts =
     format-dockerfile = pre_commit_hooks.format_dockerfile:main [format_dockerfile]
     print-detection = pre_commit_hooks.print_detection:main
     pprint-detection = pre_commit_hooks.pprint_detection:main
+    pylint-report-html = pre_commit_hooks.pylint_report_html:main
 
 [options.extras_require]
 format_dockerfile =
