--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -23,11 +23,13 @@
   name: detect pprint on python code
   types: ["python"]
 - id: pylint-with-html-report
-  name: pylint html report
   additional_dependencies:
     - pylint
     - pylint-report
   description: genereate html report from pylint
-  entry: precommit_tools/pylint-report-html.sh
-  language: system
+  entry: pylint-report-html
+  language: python
   minimum_pre_commit_version: '2.20.0'
+  name: pylint html report
+  language_version: '3.10'
+  types: ["python"]
