investigate pylint report generation crash

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,11 +25,14 @@ console_scripts =
     format-dockerfile = pre_commit_hooks.format_dockerfile:main [format_dockerfile]
     print-detection = pre_commit_hooks.print_detection:main
     pprint-detection = pre_commit_hooks.pprint_detection:main
-    pylint-report-html = pre_commit_hooks.pylint_report_html:main
+    pylint-report-html = pre_commit_hooks.pylint_report_html:main [pylint-report]
 
 [options.extras_require]
 format_dockerfile =
     dockerfile-parse==2.0.1
+pylint_report =
+    pylint==2.17.4
+    pylint-report==2.4.0
 
 [bdist_wheel]
 universal = True
