--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,7 @@
     - dockerfile-parse
   description: format dockerfiles
   entry: format-dockerfile
+  files: Dockerfile, .dockerfile$, .Dockerfile$
   language: python
   language_version: '3.10'
   minimum_pre_commit_version: '2.20.0'
@@ -10,6 +11,7 @@
   types: ["dockerfile"]
 - id: python-print-detection
   entry: print-detection
+  files: .py$
   language: python
   language_version: '3.10'
   minimum_pre_commit_version: '2.20.0'
@@ -17,6 +19,7 @@
   types: ["python"]
 - id: python-pprint-detection
   entry: pprint-detection
+  files: .py$
   language: python
   language_version: '3.10'
   minimum_pre_commit_version: '2.20.0'
