--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ console_scripts =
     print-detection = pre_commit_hooks.print_detection:main
     pprint-detection = pre_commit_hooks.pprint_detection:main
     pylint-report-html = pre_commit_hooks.pylint_report_html:main [pylint-report]
+    yaml-sorter = pre_commit_hooks.yaml_sorter:main [yaml]
 
 [options.extras_require]
 format_dockerfile =
@@ -33,6 +34,8 @@ format_dockerfile =
 pylint_report =
     pylint==2.17.4
     pylint-report==2.4.0
+yaml =
+    PyYAML==6.0.1
 
 [bdist_wheel]
 universal = True
