--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    console-debug-detectioon = pre_commit_hooks.console_debug_detection:main
+    console-debug-detection = pre_commit_hooks.console_debug_detection:main
     console-log-detection = pre_commit_hooks.console_log_detection:main
     console-table-detection = pre_commit_hooks.console_table_detection:main
     format-dockerfile = pre_commit_hooks.format_dockerfile:main [format_dockerfile]
